# Robotics

./: .gitmodules  README.md
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  arm__bringup_2setup_8py.html  arm__bringup_2setup_8py.js  arm__bringup_2test_2test__copyright_8py.html  arm__bringup_2test_2test__copyright_8py.js  arm__bringup_2test_2test__flake8_8py.html  arm__bringup_2test_2test__flake8_8py.js  arm__bringup_2test_2test__pep257_8py.html  arm__bringup_2test_2test__pep257_8py.js  block__frame__publisher_8py.html  block__frame__publisher_8py.js  bringup__launch_8py.html  bringup__launch_8py.js  class_compute_trajectory_service-members.html  class_compute_trajectory_service.html  class_compute_trajectory_service.js  class_direct_kin_server-members.html  class_direct_kin_server.html  class_direct_kin_server.js  class_end_effector_height_checker-members.html  class_end_effector_height_checker.html  class_end_effector_height_checker.js  class_gripper_controller-members.html  class_gripper_controller.html  class_gripper_controller.js  class_slerp_path_planning-members.html  class_slerp_path_planning.html  class_slerp_path_planning.js  class_trajectory_action_client-members.html  class_trajectory_action_client.html  class_trajectory_action_client.js  classes.html  classmotion__pkg_1_1_inverse_kin_server-members.html  classmotion__pkg_1_1_inverse_kin_server.html  classmotion__pkg_1_1_inverse_kin_server.js  classplanning__pkg_1_1block__frame__publisher_1_1_block_frame_publisher-members.html  (+250 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_5.js  files_0.js  files_1.js  files_2.js  files_3.js  (+46 more)
install/: local_setup.sh  setup.sh
install/arm_bringup/share/arm_bringup/: package.ps1  package.sh  package.xml
install/arm_bringup/share/arm_bringup/launch/: bringup_launch.py
install/collision_detection_pkg/lib/collision_detection_pkg/: table_avoidance_node
install/collision_detection_pkg/share/collision_detection_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_msg_interfaces/share/custom_msg_interfaces/: package.bash  package.ps1  package.sh
install/motion/lib/motion/: compute_path_service  direct_kin_server  inverse_kin_server_node  table_avoidance_node
install/motion/share/motion/: local_setup.sh  package.sh  package.xml
install/motion_pkg/lib/motion_pkg/: compute_path_service  direct_kin_server  inverse_kin_server_node
install/motion_pkg/share/motion_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/planning_pkg/lib/planning_pkg/: planning_node
install/planning_pkg/share/planning_pkg/: package.bash  package.ps1  package.sh  (+1 more)
install/vision/share/vision/: package.sh  package.xml
log/: latest_build
ros2_ws/: startup.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/custom_msg_interfaces/: CMakeLists.txt
ros2_ws/src/custom_msg_interfaces/msg/: ClassPose.msg  ClassPoseArray.msg
ros2_ws/src/custom_msg_interfaces/srv/: Interpolation.srv
ros2_ws/src/motion/: CMakeLists.txt  package.xml
ros2_ws/src/motion/include/motion/: compute_path_service.hpp  compute_trajectory_service.hpp  direct_kin_server.hpp  inverse_kin_server.hpp  kinematics_server.hpp
ros2_ws/src/motion/launch/: motion_launch.py
ros2_ws/src/motion/src/: compute_path_service.cpp  compute_trajectory_service.cpp  direct_kin_server.cpp  inverse_kin_server.cpp  kinematics_server.cpp  table_avoidance_node.cpp
ros2_ws/src/planning/: CMakeLists.txt  package.xml
ros2_ws/src/planning/launch/: planning.launch.py
ros2_ws/src/planning/src/: control_unit.cpp  error.txt  trajectory_execution.cpp
ros2_ws/src/planning_pkg/: CMakeLists.txt  package.xml  setup.py  trajectory_execution.cpp
ros2_ws/src/planning_pkg/launch/: planning.launch.py
ros2_ws/src/planning_pkg/planning_pkg/: control_unit.cpp  move_a_to_b_server.py
ros2_ws/src/planning_pkg/src/: control_unit.cc  control_unit.cpp  trajectory_execution.cpp
ros2_ws/src/ros2_ur5_interface/: CMakeLists.txt  README.md
ros2_ws/src/ros2_ur5_interface/docker/: Dockerfile  entrypoint.sh
ros2_ws/src/ros2_ur5_interface/launch/: sim.launch.py
ros2_ws/src/ros2_ur5_interface/params/: ur5_bridge.yaml
ros2_ws/src/ros2_ur5_interface/scripts/: ros2.sh  ur5.sh
ros2_ws/src/ros2_ur5_interface/src/: gripper_service.cpp  publish_trajectory_node.cpp
ros2_ws/src/ros2_ur5_interface/worlds/: empty.world
ros2_ws/src/start_simulation/: package.xml  setup.py
ros2_ws/src/start_simulation/launch/: start_simulation.launch.py
ros2_ws/src/vision/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/vision/launch/: start_vision.sh  vision.launch.py  vision_launch.py
ros2_ws/src/vision/src/: detection.cpp  position.cc  position.cpp
ros2_ws/src/vision/vision/: pose_estimator.py  struct  tf2_ros
ros2_ws/src/vision/vision/runs/detect/yolo11s_big_dataset/: args.yaml  events.out.tfevents.1736859055.quantico-System-Product-Name.53406.0
ros2_ws/src/vision/vision/runs/detect/yolo11s_big_dataset2/: args.yaml  events.out.tfevents.1736859080.quantico-System-Product-Name.53768.0  results.csv
ros2_ws/src/vision/vision/runs/detect/yolo11s_big_dataset3/: args.yaml  events.out.tfevents.1736859448.quantico-System-Product-Name.56547.0  results.csv
ros2_ws/src/vision/vision/runs/detect/yolo11s_small_dataset/: args.yaml  events.out.tfevents.1736788480.quantico-System-Product-Name.60885.0  results.csv
ros2_ws/src/vision/vision/runs/detect/yolo8s_small_dataset/: args.yaml  events.out.tfevents.1736714095.quantico-System-Product-Name.124898.0  results.csv
(+189 files in other folders)
