<?xml version="1.0"?>
<package format="2">
    <name>planning</name>
    <version>0.1.0</version>
    <description>Package for planning the path in robotics</description>

    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>control_msgs</depend>
    <depend>custom_msg_interfaces</depend>
    <depend>std_srvs</depend>
    <depend>vision_msgs</depend>
    <build_depend>tf2_ros</build_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
