<?xml version="1.0"?>
<package format="3">
  <name>start_simulation</name>
  <version>0.0.1</version>
  <description>Package to start arm detection, planning and motion</description>
  <maintainer email="sara.francavilla.dht@gmail.com">Sara Francavilla</maintainer>
  <license>Apache License 2.0</license>

  <depend>ros2launch</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <depend>ros2_ur5_interface</depend>
  <depend>pose_estimator_pkg</depend>
  <depend>motion</depend>
  <depend>planning_pkg</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

