<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision</name>
  <version>0.0.0</version>
  <description>YOLO-based object detection using LibTorch and OpenCV</description>
  <maintainer email="nivriti.raising@studenti.unitn.it">Nivriti Raising</maintainer>
  <license>TODO: License declaration</license> 

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ ROS 2 Core -->
  <depend>rclcpp</depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
